SERVER-54475 Add SSPL to shim files. Refactor sspl check.

simplecpplint.py
    Improve license check
    Clearer exception handling
    Fix process exit code (success:0, lintFail:1, internalError:2)

Add '-present' year range suffix to copyright notice in a few c++ files.